<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MAIN STRINGS -->
    <string name="app_name">DOAÇÃO</string>

    <!-- MENU -->
    <string name="menu_home">Início</string>
    <string name="menu_find">Hemocentros</string>
    <string name="menu_info">Informações</string>
    <string name="menu_help">Ajuda</string>
    <string name="menu_about">Sobre</string>
    <string name="menu_badges">Medalhas</string>

    <!-- ACCESSIBILITY -->
    <string name="acs_menu_open">Abrir navegação</string>
    <string name="acs_menu_close">Fechar navegação</string>

    <!-- ACTION BAR -->
    <string name="action_help">Ajudar</string>

    <!-- BUTTONS -->
    <string name="btn_hemocenter">Hemocentros</string>
    <string name="btn_information">Informações</string>

    <!-- SIGNUP -->
    <string name="signup_txt">* obrigatório preenchimento.</string>
    <string name="signup_name">Nome Completo *:</string>
    <string name="signup_email">Email *:</string>
    <string name="signup_blood">Tipo Sanguíneo *:</string>
    <string name="signup_birthday">Data de Nascimento *:</string>
    <string name="signup_gender">Sexo *:</string>
    <string name="signup_weight">Peso:</string>
    <string name="signup_ok">Cadastre-me!</string>
    <string name="signup_cancel">Não, obrigado!</string>

    <!-- DONATE START -->
    <string name="donate_1_welcome">BEM VINDO!</string>
    <string name="donate_1_subheader">\t\t\t\tEsta é sua primeira DOAÇÃO! Estamos felizes por isso e gratos pela sua bondade!</string>
    <string name="donate_1_text1">\t\t\t\tAntes de começar, gostaría de participar de uma pré-avaliação?</string>
    <string name="donate_1_text2">\t\t\t\tEsta avaliação irá medir sua aptidão para doar sangue, visando reduzir riscos do doador e do receptor.</string>
    <string name="donate_1_text3">\t\t\t\tAo final você receberá detalhes e instruções de como prosseguir.</string>
    <string name="donate_1_text4">\t\t\t\tMas lembre-se: este teste possui caráter informativo. Na instituição de coleta, você deverá passar por uma rigorosa triagem.</string>
    <string name="donate_1_btn_accept">Fazer Avaliação</string>
    <string name="donate_1_btn_reject">Pular</string>

    <!-- EVALUATION FORM -->
    <string name="evaluate_header">AVALIAÇÃO</string>
    <string name="evaluate_age">Idade:</string>
    <string name="evaluate_gender">Sexo:</string>
    <string name="evaluate_weight">Peso:</string>
    <string name="evaluate_pregnancy">Gravidez:</string>
    <string name="evaluate_breast_feeder">Amamenta menores de 12 meses?</string>
    <string name="evaluate_cold">Gripe, refriado ou conjuntivite nos últimos 7 dias?</string>
    <string name="evaluate_tattoo">Tatuagem nos últimos 12 meses?</string>
    <string name="evaluate_std">Risco de ter contraído DST nos últimos 12 meses?</string>
    <string name="evaluate_virus">Caxumba ou catapora no último mês?</string>
    <string name="evaluate_vaccine">Recebeu vacinação ou adquiriu dengue no último mês?</string>
    <string name="evaluate_cirurgy">Passou por procedimento cirurgico no último ano?</string>
    <string name="evaluate_bacteria">Infecções bacterianas nas últimas 2 semanas?</string>
    <string name="evaluate_hepatitis">Hepatite:</string>
    <string name="evaluate_submit">Resultado</string>
    <string name="evaluate_cancel">Voltar</string>

    <!-- DONATION INFO -->
    <string name="donation_info_header">DOE VIDA, DOE SANGUE</string>
    <string name="donation_info_subheader">\t\t\t\tVeja abaixo as recomendações para que sua doação ocorra da melhor forma possível.</string>
    <string name="donation_info_sh1">O QUE LEVAR?</string>
    <string name="donation_info_sh1_1">\t\t\t\t<b>DOCUMENTO DE IDENTIDADE</b>: garanta que você está o portando antes de sair de sua casa.</string>
    <string name="donation_info_sh2">RECOMENDAÇÕES</string>
    <string name="donation_info_sh2_1">\t\t\t\t<b>DESCANSE BEM</b>: tenha dormido bem no dia da doação.</string>
    <string name="donation_info_sh2_2">\t\t\t\t<b>ALIMENTAÇÃO SAUDÁVEL</b>: evite gorduras. Bebidas alcoólicas, nem pensar!</string>
    <string name="donation_info_sh3">DUVIDAS GERAIS</string>
    <string name="donation_info_sh3_11">"De quanto em quanto tempo posso realizar uma doação?"</string>
    <string name="donation_info_sh3_12">\t\t\t\tHomens podem doar a cada 3 meses e mulheres a cada 8. Caso a doação seja por dupla aférese, este período de descanso dobra para ambos os gêneros.</string>
    <string name="donation_info_sh3_21">"Sou menor de idade, posso doar sangue?"</string>
    <string name="donation_info_sh3_22">\t\t\t\tDe acordo com a legislação brasileira que regulamenta as normas técnicas a serem aplicadas em todos os bancos de sangue do país, o menor de idade poderá doar sangue a partir dos 16 anos, sempre com autorização prévia dos pais ou responsáveis e com o formulário " Autorização para doação de sangue por menor de idade" preenchido.</string>
    <string name="donation_info_sh3_31">"Por que o diabético não pode doar sangue?"</string>
    <string name="donation_info_sh3_32">\t\t\t\tDiabético que não pode doar sangue é aquele que chamamos de insulino-dependente; ou seja, aquele que necessita de insulina para manter seu metabolismo de açúcar próximo da normalidade. Esses pacientes têm importantes alterações do sistema cardiovascular e, em conseqüência disto, durante ou logo após a doação de sangue, podem apresentar alguma reação que agrave seu estado de saúde.</string>
    <string name="donation_info_sh3_41">"Qual o tempo que o organismo leva para repor o sangue doado?"</string>
    <string name="donation_info_sh3_42">\t\t\t\tA reposição do volume de plasma retirado se dá entre 48 a 72h, sendo que a reposição de hemácias é mais lenta - ao redor de 4 semanas. A reposição do volume de plasma ocorre em 24 horas e a dos glóbulos vermelhos em 4 semanas. Entretanto, para o organismo atingir o mesmo nível de estoque de ferro que apresentava antes da doação, são necessárias 8 semanas para os homens e 12 semanas para as mulheres. Esses são os intervalos mínimos entre as duas doações de sangue.</string>
    <string name="donation_info_sh3_51">"O material usado na coleta de sangue é mesmo seguro?"</string>
    <string name="donation_info_sh3_52">\t\t\t\tSim, todo o material usado para a coleta de sangue é individual, descartável, estéril e apirogênico (não causa febre). Não há nenhum risco de o doador adquirir uma doença infecciosa com a doação de sangue.</string>

    <!-- EVALUATION RESULT -->
    <string name="evaluate_result_header">RESULTADO DA AVALIAÇÃO</string>
    <string name="evaluate_result_success">Parabéns, você está apto a doar sangue. Veja abaixo dicas a seguir para sua doação.</string>
    <string name="evaluate_result_error">Infelizmente vocẽ não está apto a realizar uma doação.</string>
    <string name="evaluate_result_donation_date">A data para que você realize uma doação é: </string>
    <string name="evaluate_result_error_explanation">Entenda porque sua doação é arriscada e saiba como prosseguir.</string>

    <!-- HOME -->
    <string name="home_greeting">Olá</string>
    <string name="home_1st">FAÇA SUA <b>PRIMEIRA DOAÇÃO</b> DE SANGUE</string>

    <!-- GENDER -->
    <string name="male">Homem</string>
    <string name="female">Mulher</string>

    <!-- BLOOD TYPES -->
    <string-array name="bloodtype">
        <item>Desconhecido</item>
        <item>A+</item>
        <item>A-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="pregnancy">
        <item>Não</item>
        <item>Sim, estou há 2 meses</item>
        <item>Sim, estou há 4 meses</item>
        <item>Sim, estou há 6 meses</item>
        <item>Sim, estou há 8 meses</item>
        <item>Sim, estive há 3 meses</item>
        <item>Sim, estive há 6 meses</item>
        <item>Sim, estive há 9 meses</item>
        <item>Sim, estive há 12 meses</item>
    </string-array>

    <!-- OPTIONS -->
    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <!-- METRICS -->
    <string name="weight">Kilos</string>
    <string name="weight_hint">Em kilos</string>
    <string name="weight_acron">kg.</string>

</resources>