<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.mexico750.doacao.activities.MainActivity$PlaceholderFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp "
        android:src="@drawable/logotype"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textColor="@color/app_red"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_header"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_subheader"/>

            <TextView
                style="@style/AppInfoSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh1_1"/>

            <TextView
                style="@style/AppInfoSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh2"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh2_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh2_2"/>

            <TextView
                style="@style/AppInfoSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3"/>

            <TextView
                style="@style/AppInfoQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_11"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_12"/>

            <TextView
                style="@style/AppInfoQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_21"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_22"/>

            <TextView
                style="@style/AppInfoQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_31"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_32"/>

            <TextView
                style="@style/AppInfoQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_41"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_42"/>

            <TextView
                style="@style/AppInfoQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_51"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_info_sh3_52"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
