<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="32dp"
            android:textColor="@color/app_red"
            android:textStyle="bold"
            android:text="@string/evaluate_header"/>

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_age"/>

        <EditText
            android:id="@+id/evaluation_age"
            style="@style/AppEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_gender"/>

        <EditText
            android:id="@+id/evaluation_gender"
            style="@style/AppEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_weight"/>

        <EditText
            android:id="@+id/evaluation_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/weight_hint"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <LinearLayout
            android:id="@+id/donate_pregancy_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="10dp"
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evaluate_pregnancy"/>

            <Spinner
                android:id="@+id/evaluation_pregnancy"
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pregnancy"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                android:layout_marginTop="20dp"
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evaluate_breast_feeder"/>

            <CheckBox
                android:id="@+id/evaluation_breastfeeder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_cold"/>

        <CheckBox
            android:id="@+id/evaluation_cold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_bacteria"/>

        <CheckBox
            android:id="@+id/evaluation_bacterias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_virus"/>

        <CheckBox
            android:id="@+id/evaluation_viruses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_vaccine"/>

        <CheckBox
            android:id="@+id/evaluation_vaccines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_cirurgy"/>

        <CheckBox
            android:id="@+id/evaluation_cirurgy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_tattoo"/>

        <CheckBox
            android:id="@+id/evaluation_tattoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_std"/>

        <CheckBox
            android:id="@+id/evaluation_std"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <TextView
            android:layout_marginTop="20dp"
            style="@style/AppLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/evaluate_hepatitis"/>

        <CheckBox
            android:id="@+id/evaluation_hepatitis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/evaluation_accept"
                style="@style/AppButtonAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/evaluate_submit"/>

            <Button
                android:id="@+id/evaluation_reject"
                style="@style/AppButtonReject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:layout_margin="@dimen/margin_default"
                android:text="@string/evaluate_cancel"
                android:onClick="cancelEvaluation"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>