<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp "
        android:src="@drawable/logotype"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/donate_1_welcome"
                android:textColor="@color/app_blue"
                android:textStyle="bold"
                android:textSize="30dp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_1_subheader" />

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_1_text1"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_1_text2"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_1_text3"/>


            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_1_text4"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <Button
                    style="@style/AppButtonAccept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/donate_1_btn_accept"
                    android:layout_marginRight="10dp"
                    android:onClick="nextDonationPage" />


                <Button
                    style="@style/AppButtonReject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/donate_1_btn_reject"
                    android:onClick="rejectDonationFirstTest" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>