<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/logotype"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/AppVerMargin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:textColor="@color/app_red"
                android:text="@string/signup_txt"/>

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_email"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_birthday"/>

            <TextView
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_gender"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/female"/>

            </RadioGroup>

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_blood"/>

            <Spinner
                style="@style/AppEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bloodtype"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_height"/>

            <EditText
                android:id="@+id/signup_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/length_hint"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                style="@style/AppLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_weight"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/weight_hint"
                android:singleLine="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/AppButtonAccept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/signup_ok"/>

                <Button
                    style="@style/AppButtonReject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/signup_cancel"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
